made various changes
- implemented new query form
- ssl connection ongoing
- collection name special characters beachtet
- Klassen variablen umbenannt
- Methoden umbenannt